12_12 fix: change overflow to hidden on notification item and change cursor to pointer on it

--- a/practs/pract12/task12_12/scss/task12_12.scss
+++ b/practs/pract12/task12_12/scss/task12_12.scss
@@ -98,6 +98,9 @@ body {
 
             counter-increment: item-place;
 
+            overflow: hidden;
+            cursor: pointer;
+
             &::before {
                 content: counter(item-place);
 
